# serializer version: 1
# name: test_selects[select.gen2_thermostat_display_direction-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'normal',
        'reversed',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.gen2_thermostat_display_direction',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Display direction',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Display direction',
    'platform': 'bosch_shc',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'display_direction',
    'unique_id': 'trv2-1_display_direction',
    'unit_of_measurement': None,
  })
# ---
# name: test_selects[select.gen2_thermostat_display_direction-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Gen2 Thermostat Display direction',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'normal',
        'reversed',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.gen2_thermostat_display_direction',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'normal',
  })
# ---
# name: test_selects[select.gen2_thermostat_displayed_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'setpoint',
        'measured',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.gen2_thermostat_displayed_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Displayed temperature',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Displayed temperature',
    'platform': 'bosch_shc',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'displayed_temperature',
    'unique_id': 'trv2-1_displayed_temperature',
    'unit_of_measurement': None,
  })
# ---
# name: test_selects[select.gen2_thermostat_displayed_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Gen2 Thermostat Displayed temperature',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'setpoint',
        'measured',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.gen2_thermostat_displayed_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'setpoint',
  })
# ---
# name: test_selects[select.gen2_thermostat_heater_type-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'floor_heating',
        'floor_heating_low_energy',
        'radiator',
        'convector_passive',
        'convector_active',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.gen2_thermostat_heater_type',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Heater type',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Heater type',
    'platform': 'bosch_shc',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'heater_type',
    'unique_id': 'trv2-1_heater_type',
    'unit_of_measurement': None,
  })
# ---
# name: test_selects[select.gen2_thermostat_heater_type-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Gen2 Thermostat Heater type',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'floor_heating',
        'floor_heating_low_energy',
        'radiator',
        'convector_passive',
        'convector_active',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.gen2_thermostat_heater_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'radiator',
  })
# ---
# name: test_selects[select.gen2_thermostat_valve_type-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'normally_close',
        'normally_open',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.gen2_thermostat_valve_type',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Valve type',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Valve type',
    'platform': 'bosch_shc',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'valve_type',
    'unique_id': 'trv2-1_valve_type',
    'unit_of_measurement': None,
  })
# ---
# name: test_selects[select.gen2_thermostat_valve_type-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Gen2 Thermostat Valve type',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'normally_close',
        'normally_open',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.gen2_thermostat_valve_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'normally_close',
  })
# ---
# name: test_selects[select.room_thermostat_2_display_direction-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'normal',
        'reversed',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.room_thermostat_2_display_direction',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Display direction',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Display direction',
    'platform': 'bosch_shc',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'display_direction',
    'unique_id': 'rth2-1_display_direction',
    'unit_of_measurement': None,
  })
# ---
# name: test_selects[select.room_thermostat_2_display_direction-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Room Thermostat 2 Display direction',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'normal',
        'reversed',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.room_thermostat_2_display_direction',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'normal',
  })
# ---
# name: test_selects[select.room_thermostat_2_displayed_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'setpoint',
        'measured',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.room_thermostat_2_displayed_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Displayed temperature',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Displayed temperature',
    'platform': 'bosch_shc',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'displayed_temperature',
    'unique_id': 'rth2-1_displayed_temperature',
    'unit_of_measurement': None,
  })
# ---
# name: test_selects[select.room_thermostat_2_displayed_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Room Thermostat 2 Displayed temperature',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'setpoint',
        'measured',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.room_thermostat_2_displayed_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'setpoint',
  })
# ---
# name: test_selects[select.room_thermostat_2_terminal_type-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'not_connected',
        'floor_sensor_connected',
        'floor_sensor_used_for_regulation',
        'floor_sensor_displayed',
        'floor_sensor_displayed_and_used_for_regulation',
        'volt_free_sensor_connected',
        'volt_free_sensor_connected_and_used_for_operation',
        'outdoor_sensor_connected',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.room_thermostat_2_terminal_type',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Terminal type',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Terminal type',
    'platform': 'bosch_shc',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'terminal_type',
    'unique_id': 'rth2-1_terminal_type',
    'unit_of_measurement': None,
  })
# ---
# name: test_selects[select.room_thermostat_2_terminal_type-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Room Thermostat 2 Terminal type',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'not_connected',
        'floor_sensor_connected',
        'floor_sensor_used_for_regulation',
        'floor_sensor_displayed',
        'floor_sensor_displayed_and_used_for_regulation',
        'volt_free_sensor_connected',
        'volt_free_sensor_connected_and_used_for_operation',
        'outdoor_sensor_connected',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.room_thermostat_2_terminal_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_connected',
  })
# ---
# name: test_selects[select.test_device_actuator_type-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'normally_closed',
        'normally_open',
        'unsupported',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.test_device_actuator_type',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Actuator type',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Actuator type',
    'platform': 'bosch_shc',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'actuator_type',
    'unique_id': 'relay-1_actuator_type',
    'unit_of_measurement': None,
  })
# ---
# name: test_selects[select.test_device_actuator_type-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Device Actuator type',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'normally_closed',
        'normally_open',
        'unsupported',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.test_device_actuator_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'normally_open',
  })
# ---
# name: test_selects[select.test_device_comfort_sensitivity_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'high',
        'middle',
        'low',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.test_device_comfort_sensitivity_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Comfort sensitivity level',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Comfort sensitivity level',
    'platform': 'bosch_shc',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'smart_sensitivity_comfort',
    'unique_id': 'md2-1_smart_sensitivity_comfort',
    'unit_of_measurement': None,
  })
# ---
# name: test_selects[select.test_device_comfort_sensitivity_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Device Comfort sensitivity level',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'high',
        'middle',
        'low',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.test_device_comfort_sensitivity_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'high',
  })
# ---
# name: test_selects[select.test_device_motion_sensitivity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'high',
        'middle',
        'low',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.test_device_motion_sensitivity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Motion sensitivity',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Motion sensitivity',
    'platform': 'bosch_shc',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'motion_sensitivity',
    'unique_id': 'md2-1_motion_sensitivity',
    'unit_of_measurement': None,
  })
# ---
# name: test_selects[select.test_device_motion_sensitivity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Device Motion sensitivity',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'high',
        'middle',
        'low',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.test_device_motion_sensitivity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'middle',
  })
# ---
# name: test_selects[select.test_device_orientation_light_response_time-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'long',
        'short',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.test_device_orientation_light_response_time',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Orientation light response time',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Orientation light response time',
    'platform': 'bosch_shc',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'orientation_light_response',
    'unique_id': 'md2-1_orientation_light_response',
    'unit_of_measurement': None,
  })
# ---
# name: test_selects[select.test_device_orientation_light_response_time-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Device Orientation light response time',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'long',
        'short',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.test_device_orientation_light_response_time',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'long',
  })
# ---
# name: test_selects[select.test_device_output_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'attached',
        'detached',
        'detached_short_press',
        'detached_long_press',
        'unsupported',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.test_device_output_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Output mode',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Output mode',
    'platform': 'bosch_shc',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'output_mode',
    'unique_id': 'relay-1_output_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_selects[select.test_device_output_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Device Output mode',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'attached',
        'detached',
        'detached_short_press',
        'detached_long_press',
        'unsupported',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.test_device_output_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'attached',
  })
# ---
# name: test_selects[select.test_device_security_sensitivity_level-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'high',
        'middle',
        'low',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.test_device_security_sensitivity_level',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Security sensitivity level',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Security sensitivity level',
    'platform': 'bosch_shc',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'smart_sensitivity_security',
    'unique_id': 'md2-1_smart_sensitivity_security',
    'unit_of_measurement': None,
  })
# ---
# name: test_selects[select.test_device_security_sensitivity_level-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Device Security sensitivity level',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'high',
        'middle',
        'low',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.test_device_security_sensitivity_level',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'high',
  })
# ---
# name: test_selects[select.test_device_smoke_sensitivity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'high',
        'middle',
        'low',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.test_device_smoke_sensitivity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Smoke sensitivity',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Smoke sensitivity',
    'platform': 'bosch_shc',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'smoke_sensitivity',
    'unique_id': 'sd-1_smoke_sensitivity',
    'unit_of_measurement': None,
  })
# ---
# name: test_selects[select.test_device_smoke_sensitivity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Device Smoke sensitivity',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'high',
        'middle',
        'low',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.test_device_smoke_sensitivity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'middle',
  })
# ---
# name: test_selects[select.test_device_state_after_power_outage-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'on',
        'last_state',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.test_device_state_after_power_outage',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'State after power outage',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'State after power outage',
    'platform': 'bosch_shc',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'state_after_power_outage',
    'unique_id': 'plug-1_state_after_power_outage',
    'unit_of_measurement': None,
  })
# ---
# name: test_selects[select.test_device_state_after_power_outage-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Device State after power outage',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'off',
        'on',
        'last_state',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.test_device_state_after_power_outage',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_selects[select.test_device_switch_type-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'none',
        'pushbutton',
        'switch',
        'no_switch',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.test_device_switch_type',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Switch type',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Switch type',
    'platform': 'bosch_shc',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'switch_type',
    'unique_id': 'relay-1_switch_type',
    'unit_of_measurement': None,
  })
# ---
# name: test_selects[select.test_device_switch_type-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Device Switch type',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'none',
        'pushbutton',
        'switch',
        'no_switch',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.test_device_switch_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'pushbutton',
  })
# ---
# name: test_selects[select.test_device_vibration_sensitivity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'very_high',
        'high',
        'medium',
        'low',
        'very_low',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.test_device_vibration_sensitivity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Vibration sensitivity',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Vibration sensitivity',
    'platform': 'bosch_shc',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'vibration_sensitivity',
    'unique_id': 'sc2p-1_vibration_sensitivity',
    'unit_of_measurement': None,
  })
# ---
# name: test_selects[select.test_device_vibration_sensitivity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Device Vibration sensitivity',
      <SelectEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'very_high',
        'high',
        'medium',
        'low',
        'very_low',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.test_device_vibration_sensitivity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'medium',
  })
# ---
